--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.Game">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +24,8 @@
         </activity>
         <activity android:name=".Menu1joueur" />
         <activity android:name=".Entrainement" />
+        <activity android:name=".TargetJeu" />
+        <activity android:name=".FlingGame" />
     </application>
 
 </manifest>
