--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.game"
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
@@ -12,6 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Game"
         tools:targetApi="31">
+        <activity
+            android:name=".challenges.balance.BalanceActivity"
+            android:exported="true"
+            android:screenOrientation="fullSensor" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -29,5 +34,8 @@
         <activity android:name=".Quiz1Game" />
 
     </application>
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
 
 </manifest>
