Modification du jeu catch game et du quizz; finalisation de la partie rapide solo avec les jeux de Matt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
         <activity android:name=".CatchGame" />
         <activity android:name=".Quiz1Game" />
         <activity android:name=".ShotGame" />
+        <activity android:name=".PartieRapide" />
+        <activity android:name=".PartieRapideResult" />
 
     </application>
     <uses-permission android:name="android.permission.VIBRATE" />
